--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "nedb-promises": "^6.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
